--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <section class="dark-wrapper">
+    <div class="dark-wrapper">
         <header>
           <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -74,7 +74,7 @@
 
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Related Company
+                      Company
                     </a>
                     <ul class="dropdown-menu">
                       <div class="dropdown-icon">
@@ -111,7 +111,7 @@
                 <div class="talk-animation">
                   <img src="src/images/chat-icon.png" alt="chat-icon">
 
-                  <a href="#" class="animation-link">
+                  <a href="#contact-us" class="animation-link">
                     Connect Now <img src="src/images/link-arrow.png" alt="link-arrow">
                   </a>
 
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="col-2">
-                  <div class="why-choose-us-wrapper__cta" src="src/images/why-choose-us-wrapper-cta-bg.png">
+                  <div class="why-choose-us-wrapper__cta" data-bg="src/images/why-choose-us-wrapper-cta-bg.png">
                     <h3>Want to discuss something?</h3>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                     <a href="#" class="btn btn-blue">Contact Us</a>
@@ -395,7 +395,7 @@
                 <div class="col-2  slider_right__col">
                     <div class="right-slider owl-carousel">
                       <div class="carousel-content" data-animated="false">
-                        <div class="carousel-content__bg" src="src/images/testimonial-bg.png">
+                        <div class="carousel-content__bg" data-bg="src/images/testimonial-bg.png">
                           <div class="testimonial-chat">So Nice❤️ <span style="float:right">4:45 PM</span></div>
                           <div class="testimonial-chat">Awesome <span style="float:right">4:46 PM</span></div>
                           <div class="testimonial-chat">OMG <span style="float:right">4:47 PM</span></div>
@@ -405,7 +405,7 @@
                       </div>
                       
                       <div class="carousel-content" data-animated="false">
-                        <div class="carousel-content__bg" src="src/images/testimonial-bg.png">
+                        <div class="carousel-content__bg" data-bg="src/images/testimonial-bg.png">
                           <div class="testimonial-chat">Absolutely love it! <span style="float:right">3:21 PM</span></div>
                           <div class="testimonial-chat">Perfect results <span style="float:right">3:22 PM</span></div>
                           <div class="testimonial-chat">Well done team <span style="float:right">3:23 PM</span></div>
@@ -413,7 +413,7 @@
                       </div>
 
                       <div class="carousel-content" data-animated="false">
-                        <div class="carousel-content__bg" src="src/images/testimonial-bg.png">
+                        <div class="carousel-content__bg" data-bg="src/images/testimonial-bg.png">
                           <div class="testimonial-chat">Hello Good Morning! <span style="float:right">3:21 PM</span></div>
                           <div class="testimonial-chat">How are you! <span style="float:right">3:22 PM</span></div>
                         </div>
@@ -456,9 +456,9 @@
                     <div class="tag">AEM</div>
                   </div>
 
-                  <div class="title">
+                  <a href="#" class="title">
                     AI’s Role in Personalizing Education: The Future of Learning
-                  </div>
+                  </a>
 
                   <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
                   <a href="#" class="light-link">Read More</a>
@@ -478,9 +478,9 @@
                     <div class="tag">AEM</div>
                   </div>
 
-                  <div class="title">
+                  <a href="#" class="title">
                     AI’s Role in Personalizing Education: The Future of Learning
-                  </div>
+                  </a>
 
                   <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
                   <a href="#" class="light-link">Read More</a>
@@ -500,9 +500,9 @@
                     <div class="tag">AEM</div>
                   </div>
 
-                  <div class="title">
+                  <a href="#" class="title">
                     AI’s Role in Personalizing Education: The Future of Learning
-                  </div>
+                  </a>
 
                   <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
                   <a href="#" class="light-link">Read More</a>
@@ -515,13 +515,12 @@
 
         
       </div>
-    </div>
 
     <button class="scroll-top" id="scrollTopBtn" aria-label="Scroll to top">↑</button>
 
       <footer>
         <div class="footer-contact">
-            <div class="footer-contact__content" src="src/images/rect-bg-dark.png">
+            <div class="footer-contact__content" data-bg="src/images/rect-bg-dark.png"  id="contact-us">
               <div class="container">
                 <div class="d-flex flex-head">
                   <div class="col-1 footer-contact__items">
@@ -670,7 +669,7 @@
             </div>
           </div>
       </footer>
-    </section>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
