Working on About us UI

--- a/about-us.html
+++ b/about-us.html
@@ -81,7 +81,7 @@
                         <img src="src/images/menu-dropdown-icon.svg" alt="menu-dropdown-icon">
                       </div>
                       <li class="tag">Related Company</li>
-                      <li><a class="dropdown-item" href="#">About Arroact</a></li>
+                      <li><a class="dropdown-item" href="about-us.html">About Arroact</a></li>
                       <li><a class="dropdown-item" href="#">Contact Us</a></li>
                       <li><a class="dropdown-item" href="#">Career</a></li>
                       <li><a class="dropdown-item" href="#">Blogs</a></li>
@@ -107,9 +107,134 @@
 
                 
             </div>    
-        </div>
+      </div>
 
-        <button class="scroll-top" id="scrollTopBtn" aria-label="Scroll to top">↑</button>
+
+      <div class="aboutus-wrapper w-full">
+        <img src="src/images/bgline-svg-2.svg" alt="bgline-svg-2" class="aboutus-wrapper__bgline">
+
+
+        <div class="container">
+          <div class="d-grid">
+            <div class="col">
+              <div class="small-title">About</div>
+              <h3 class="title_3">
+                All the things that you want to know about Arroact
+              </h3>
+            </div>
+  
+            <div class="col">
+              <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+              <p>
+  
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="aboutus-square-wrapper">
+        <div class="container">
+          <div class="d-grid">
+            <div class="col">
+              <div class="square-content__left">
+                <img src="src/images/office-worker.png" alt="office-worker" class="square-content__img">
+
+                <div class="d-flex">
+                  <div class="col-6">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <img src="src/images/fb-icon-1.png" alt="fb-icon-1">
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="src/images/twitter-icon-1.png" alt="twitter-icon-1">
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="src/images/linkdin-icon-1.png" alt="linkdin-icon-1">
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="src/images/insta-icon-1.png" alt="insta-icon-1">
+                        </a>
+                      </li>
+                    </ul>
+                    <div class="box-1">
+                      <h3 class="title_3">1</h3>
+                      <div>
+                        <h5>Office</h5>
+                        <p>Lorem Ipsum has been the industry's standard dummy text.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-6">
+                    <div class="box-2">
+                      <h3 class="title_3">50+</h3>
+                      <div>
+                        <h5>Team Members</h5>
+                        <p>Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="square-content__right">
+
+                <div class="d-flex">
+                  
+
+                  <div class="col-6">
+                    <div class="box-2">
+                      <h3 class="title_3">50+</h3>
+                      <div>
+                        <h5>Team Members</h5>
+                        <p>Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-6">
+
+                    <div class="box-1">
+                      <h3 class="title_3">1</h3>
+                      <div>
+                        <h5>Focus</h5>
+                        <p>Lorem Ipsum has been the industry's standard dummy text.</p>
+                      </div>
+                    </div>
+
+                    <div class="box-1">
+                      <h3 class="title_3">100%</h3>
+                      <div>
+                        <h5>Creativity</h5>
+                        <p>Lorem Ipsum has been the industry's standard dummy text.</p>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
+                <img src="src/images/office-chat.png" alt="office-chat.png" class="square-content__img">
+
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+
+      <button class="scroll-top" id="scrollTopBtn" aria-label="Scroll to top">↑</button>
 
       <footer>
         <div class="footer-contact">
@@ -243,7 +368,7 @@
                   <a href="#" class="animated-link">
                     Sitemap
                   </a>
-                  <a href="#" class="animated-link">
+                  <a href="about-us.html" class="animated-link">
                     About Us
                   </a>
                   <a href="#" class="animated-link">
