--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <img src="src/images/menu-dropdown-icon.svg" alt="menu-dropdown-icon">
                       </div>
                       <li class="tag">Related Company</li>
-                      <li><a class="dropdown-item" href="#">About Arroact</a></li>
+                      <li><a class="dropdown-item" href="about-us.html">About Arroact</a></li>
                       <li><a class="dropdown-item" href="#">Contact Us</a></li>
                       <li><a class="dropdown-item" href="#">Career</a></li>
                       <li><a class="dropdown-item" href="#">Blogs</a></li>
@@ -650,7 +650,7 @@
                   <a href="#" class="animated-link">
                     Sitemap
                   </a>
-                  <a href="#" class="animated-link">
+                  <a href="about-us.html" class="animated-link">
                     About Us
                   </a>
                   <a href="#" class="animated-link">
