working on blog listing page

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <div class="why-choose-us-wrapper__cta" data-bg="src/images/why-choose-us-wrapper-cta-bg.png">
                     <h3>Want to discuss something?</h3>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <a href="#" class="btn btn-blue">Contact Us</a>
+                    <a href="#contact-us" class="btn btn-blue">Contact Us</a>
                   </div>
                 </div>
 
