Completed About us , Contact Us, Blog list and Blog detail

--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
       </div>
 
 
-      <div class="aboutus-wrapper w-full">
+      <div class="aboutus-wrapper w-full top-gap">
         <img src="src/images/bgline-svg-2.svg" alt="bgline-svg-2" class="aboutus-wrapper__bgline">
 
 
