--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
           <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="navbar-brand" href="#"><img src="src/images/white-logo.png" alt="white-logo"/></a>
+              <a class="navbar-brand" href="/"><img src="src/images/white-logo.png" alt="white-logo"/></a>
               <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -82,9 +82,9 @@
                       </div>
                       <li class="tag">Related Company</li>
                       <li><a class="dropdown-item" href="about-us.html">About Arroact</a></li>
-                      <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                      <li><a class="dropdown-item" href="contact-us.html">Contact Us</a></li>
                       <li><a class="dropdown-item" href="#">Career</a></li>
-                      <li><a class="dropdown-item" href="#">Blogs</a></li>
+                      <li><a class="dropdown-item" href="blogs.html">Blogs</a></li>
                     </ul>
                   </li>
                 </ul>
