Added career detail page components

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -96,141 +96,143 @@
         </header>
 
 
-      <div class="hero-wrapper version-1 w-full">
-        <div data-bg="/src/images/blog-detail-bannerbg.png" class="hero-wrapper__bg">
-            <div class="hero-wrapper__content">
-                <div class="banner-info">
-                    <span>21 Mar’ 25 </span>  •
-                    <span>11 min read</span>
+        <main>
+          <div class="hero-wrapper version-1 w-full">
+            <div data-bg="/src/images/blog-detail-bannerbg.png" class="hero-wrapper__bg">
+                <div class="hero-wrapper__content">
+                    <div class="banner-info">
+                        <span>21 Mar’ 25 </span>  •
+                        <span>11 min read</span>
+                    </div>
+
+                    <div class="tag">Umbraco</div>
+
+                    <h3>AI’s Role in Personalizing Education: The Future of Learning</h3>
                 </div>
-
-                <div class="tag">Umbraco</div>
-
-                <h3>AI’s Role in Personalizing Education: The Future of Learning</h3>
-            </div>
-        </div>    
-      </div>
-
-      <div class="blog-detail-content top-gap">
-        <div class="container">
-            <img src="src/images/blog-detail-dummy.png" alt="blog-detail-dummy" class="blog-detail-content__img">
-
-            <h3>Lorem Ipsum is simply dummy text</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-            <ul>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-            </ul>
-
-            <h3>Lorem Ipsum is simply dummy text</h3>
-
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-            <ul>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-            </ul>
-
-            <img src="src/images/blog-detail-dummy.png" alt="blog-detail-dummy" class="blog-detail-content__img2">
-
-            <h3>Lorem Ipsum is simply dummy text</h3>
-
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-            <ul>
-                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
-            </ul>
-        </div>
-      </div>
-
-      <div class="blogs-listing-wrapper w-full version-2">
-        <div class="container">
-          <div class="title-block">
-            <h2 class="title_2">
-            Related Blogs
-
-              <img src="src/images/blue-line-vector-3.svg" alt="blue-line-vector-3">
-            </h2>
+            </div>    
           </div>
 
+          <div class="blog-detail-content top-gap">
+            <div class="container">
+                <img src="src/images/blog-detail-dummy.png" alt="blog-detail-dummy" class="blog-detail-content__img">
 
-          <div class="blogs-listing__items">
-            <div class="blog__item">
-              <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
+                <h3>Lorem Ipsum is simply dummy text</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-              <div class="blog__item___about">
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <span>21 Mar’ 25 </span>  •
-                    <span>11 min read</span>
-                  </div>
+                <ul>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
 
-                  <div class="tag">AEM</div>
-                </div>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
 
-                <a href="#" class="title">
-                  AI’s Role in Personalizing Education: The Future of Learning
-                </a>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
 
-                <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
-                <a href="#" class="light-link">Read More</a>
-              </div>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
+                </ul>
+
+                <h3>Lorem Ipsum is simply dummy text</h3>
+
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+                <ul>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
+                </ul>
+
+                <img src="src/images/blog-detail-dummy.png" alt="blog-detail-dummy" class="blog-detail-content__img2">
+
+                <h3>Lorem Ipsum is simply dummy text</h3>
+
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+                <ul>
+                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</li>
+                </ul>
             </div>
-
-            <div class="blog__item">
-              <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
-
-              <div class="blog__item___about">
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <span>21 Mar’ 25 </span>  •
-                    <span>11 min read</span>
-                  </div>
-
-                  <div class="tag">AEM</div>
-                </div>
-
-                <a href="#" class="title">
-                  AI’s Role in Personalizing Education: The Future of Learning
-                </a>
-
-                <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
-                <a href="#" class="light-link">Read More</a>
-              </div>
-            </div>
-
-            <div class="blog__item">
-              <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
-
-              <div class="blog__item___about">
-                <div class="d-flex justify-content-between">
-                  <div>
-                    <span>21 Mar’ 25 </span>  •
-                    <span>11 min read</span>
-                  </div>
-
-                  <div class="tag">AEM</div>
-                </div>
-
-                <a href="#" class="title">
-                  AI’s Role in Personalizing Education: The Future of Learning
-                </a>
-
-                <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
-                <a href="#" class="light-link">Read More</a>
-              </div>
-            </div>
-
           </div>
-        </div>
-      </div>
 
-      <button class="scroll-top" id="scrollTopBtn" aria-label="Scroll to top">↑</button>
+          <div class="blogs-listing-wrapper w-full version-2">
+            <div class="container">
+              <div class="title-block">
+                <h2 class="title_2">
+                Related Blogs
+
+                  <img src="src/images/blue-line-vector-3.svg" alt="blue-line-vector-3">
+                </h2>
+              </div>
+
+
+              <div class="blogs-listing__items">
+                <div class="blog__item">
+                  <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
+
+                  <div class="blog__item___about">
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <span>21 Mar’ 25 </span>  •
+                        <span>11 min read</span>
+                      </div>
+
+                      <div class="tag">AEM</div>
+                    </div>
+
+                    <a href="#" class="title">
+                      AI’s Role in Personalizing Education: The Future of Learning
+                    </a>
+
+                    <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
+                    <a href="#" class="light-link">Read More</a>
+                  </div>
+                </div>
+
+                <div class="blog__item">
+                  <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
+
+                  <div class="blog__item___about">
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <span>21 Mar’ 25 </span>  •
+                        <span>11 min read</span>
+                      </div>
+
+                      <div class="tag">AEM</div>
+                    </div>
+
+                    <a href="#" class="title">
+                      AI’s Role in Personalizing Education: The Future of Learning
+                    </a>
+
+                    <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
+                    <a href="#" class="light-link">Read More</a>
+                  </div>
+                </div>
+
+                <div class="blog__item">
+                  <img src="src/images/blog-listing-dummy.png" alt="blog-listing-dummy">
+
+                  <div class="blog__item___about">
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <span>21 Mar’ 25 </span>  •
+                        <span>11 min read</span>
+                      </div>
+
+                      <div class="tag">AEM</div>
+                    </div>
+
+                    <a href="#" class="title">
+                      AI’s Role in Personalizing Education: The Future of Learning
+                    </a>
+
+                    <p class="small-text">Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum has been the industry.</p>
+                    <a href="#" class="light-link">Read More</a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <button class="scroll-top" id="scrollTopBtn" aria-label="Scroll to top">↑</button>
+        </main>    
 
       <footer>
         <div class="footer-contact">
