Created adobe-experience-manager-technology page components

--- a/career-detail.html
+++ b/career-detail.html
@@ -162,7 +162,7 @@
         </main>    
 
       <footer>
-        <div class="footer-contact">
+        <div class="footer-contact version-3">
           <div class="footer-contact__content" data-bg="src/images/rect-bg-dark.png"  id="contact-us">
             <div class="container">
               <div class="d-flex flex-head">
