--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </div>
 
 
-            <div class="blogs-listing-wrapper w-full">
+            <div class="blogs-listing-wrapper">
               <div class="container">
                 <div class="title-block">
                   <div class="small-title">Resources</div>
