--- a/blog-detail.html
+++ b/blog-detail.html
@@ -149,7 +149,7 @@
             </div>
           </div>
 
-          <div class="blogs-listing-wrapper w-full version-2">
+          <div class="blogs-listing-wrapper version-2">
             <div class="container">
               <div class="title-block">
                 <h2 class="title_2">
