Added Umbraco & Sitecore pages components

--- a/umbraco-technology.html
+++ b/umbraco-technology.html
@@ -97,10 +97,9 @@
 
         <main>
             <div class="hero-wrapper version-1 w-full">
-                <div data-bg="/src/images/adobe-experience-manager-technology-bg.png" class="hero-wrapper__bg">
+                <div data-bg="/src/images/umbraco-technology-bg.png" class="hero-wrapper__bg">
                     <div class="hero-wrapper__content justify-content-end content-width">
-                        <h1 class="title_2">Adobe Experience
-                            Manager</h1>
+                        <h1 class="title_2">Umbraco</h1>
 
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s.</p>
 
@@ -112,33 +111,26 @@
           <div class="service-detail-wrapper top-gap">
             <div class="container">
                 <div class="about-content">
-                    <h3>Looking for a
-                        AEM expert?</h3>
+                    <h3>Looking for a Umbraco expert?</h3>
                     <p>A skilled team that has already seen all the challenges you might face and knows how to handle them! Meet dedicated Sitecore experts at Arroact to accelerate your journey to market success. Let's find out if we're the perfect match for you!</p>
                 </div>
 
                 <div class="box-items grid-1">
                     <div class="item">
-                        <h3>AEM Development Services</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                        <a href="#" class="btn btn-blue">Talk to the Expert</a>
-                    </div>
-
-                    <div class="item">
-                        <h3>AEM Managed Services</h3>
+                        <h3>Umbraco Development Services</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <a href="#" class="btn btn-blue">Talk to the Expert</a>
                     </div>
 
                     <div class="item bg-blue">
-                        <h3>Hire Adobe Experience Manager Developer</h3>
+                        <h3>Hire Umbraco Developer</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s  standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <a href="#" class="btn btn-light">Talk to the Expert</a>
                     </div>
                 </div>
 
                 <div class="box-items-2">
-                    <h3>Why Adobe Experience Manager</h3>
+                    <h3>Why Umbraco</h3>
 
                     <div class="d-grid">
                         <div class="item">
@@ -182,7 +174,7 @@
                 <div class="container">
                     <div class="points">
                         <h3>Why choose Arroact as your trusted
-                            Sitecore development company?</h3>
+                            Umbraco development company?</h3>
 
                         <div class="points-list">
                             <div class="point">
