Working on UI fixing

--- a/about-us.html
+++ b/about-us.html
@@ -97,7 +97,10 @@
 
       <main>  
         <div class="hero-wrapper version-1 w-full">
-          <div data-bg="/src/images/about-bg.png" class="hero-wrapper__bg">
+          <div 
+            data-bg="/src/images/about-bg.png"
+            data-bg-mobile="/src/images/about-bg-mobile.png"
+            class="hero-wrapper__bg">
               <div class="hero-wrapper__content">
                   <h1 class="title_2">Empowering Businesses with Smarter Solutions</h1>
 
