--- a/brand-guidelines.html
+++ b/brand-guidelines.html
@@ -98,7 +98,10 @@
 
         <main>
           <div class="hero-wrapper version-1 w-full">
-            <div data-bg="/src/images/brand-guidelines-bannerbg.png" class="hero-wrapper__bg">
+            <div 
+             data-bg="/src/images/brand-guidelines-bannerbg.png"
+             data-bg-mobile="/src/images/brand-guidelines-bannerbg-mobile.png"
+             class="hero-wrapper__bg">
                 <div class="hero-wrapper__content justify-content-end">
                     <h1 class="title_2">How our brand should be represented to the world. !!</h1>
 
