--- a/blog-detail.html
+++ b/blog-detail.html
@@ -98,7 +98,10 @@
 
         <main>
           <div class="hero-wrapper version-1 w-full">
-            <div data-bg="/src/images/blog-detail-bannerbg.png" class="hero-wrapper__bg">
+            <div 
+              data-bg="/src/images/blog-detail-bannerbg.png"
+              data-bg-mobile="/src/images/blog-detail-bannerbg-mobile.png"
+              class="hero-wrapper__bg">
                 <div class="hero-wrapper__content">
                     <div class="banner-info">
                         <span>21 Mar’ 25 </span>  •
