--- a/blogs.html
+++ b/blogs.html
@@ -97,7 +97,10 @@
 
       <main>  
         <div class="hero-wrapper version-1 w-full">
-          <div data-bg="/src/images/blogs-bg.png" class="hero-wrapper__bg">
+          <div 
+           data-bg="/src/images/blogs-bg.png"
+           data-bg-mobile="/src/images/blogs-bg-mobile.png"
+           class="hero-wrapper__bg">
               <div class="hero-wrapper__content">
                   <h1 class="title_2">Welcome to Arroact Insider</h1>
 
