--- a/career-detail.html
+++ b/career-detail.html
@@ -97,7 +97,10 @@
 
         <main>
           <div class="hero-wrapper version-1 w-full">
-            <div data-bg="/src/images/career-detail-bannerbg.jpg" class="hero-wrapper__bg">
+            <div
+              data-bg="/src/images/career-detail-bannerbg.jpg"
+              data-bg-mobile="/src/images/career-detail-bannerbg-mobile.jpg"
+              class="hero-wrapper__bg">
                 <div class="hero-wrapper__content justify-content-end flex-layout">
                     
                         <div class="d-flex">
