--- a/career.html
+++ b/career.html
@@ -97,7 +97,10 @@
 
         <main>
           <div class="hero-wrapper version-1 w-full">
-            <div data-bg="/src/images/career-bannerbg.png" class="hero-wrapper__bg">
+            <div 
+            data-bg="/src/images/career-bannerbg.png"
+            data-bg-mobile="/src/images/career-bannerbg-mobile.png"
+            class="hero-wrapper__bg">
                 <div class="hero-wrapper__content justify-content-end grid-layout">
                     
                         <div class="d-grid">
